@@ -14,11 +14,14 @@ The rules for this file:
 
 
 -------------------------------------------------------------------------------
-??/??/?? IAlibay, HeetVekariya
+??/??/?? IAlibay, HeetVekariya, marinegor
 
  * 2.8.0
 
 Fixes
+ * Fix `analysis/diffusionmap.py` iteration through trajectory to iteration
+   over `self._sliced_trajectory`, hence supporting
+   `DistanceMatrix.run(frames=...)` (PR #4433)
  * Fix doctest errors of lib/picklable_file_io.py (Issue #3925, PR #4371)
  * Fix deploy action to use the correct version of the pypi upload action.
 
